--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -124,7 +124,7 @@ javafx.run.height=600
 javafx.run.width=800
 javafx.signing.blob=false
 javafx.signing.enabled=false
-javafx.signing.type=notsigned
+javafx.signing.type=self
 jlink.launcher=false
 jlink.launcher.name=KillClipperTool
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
@@ -138,7 +138,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-native.bundling.enabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
